--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "builds": [
-    { "src": "backend/src/index.ts", "use": "@now/node" },
+    { "src": "backend/src/index.ts", "use": "@vercel/node" },
     {
       "src": "frontend/package.json",
-      "use": "@now/static-build",
+      "use": "@vercel/static-build",
       "config": { "distDir": "build" }
     }
   ],
