--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,7 @@
       "dest": "frontend/static/$1"
     },
     { "src": "/favicon.ico", "dest": "frontend/favicon.ico" },
+    { "src": "/logo* ", "dest": "frontend/$1" },
     {
       "src": "/asset-manifest.json",
       "dest": "frontend/asset-manifest.json"
