--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "foodie",
   "version": "0.1.0",
   "private": true,
+  "author": "asit biswas",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -29,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "GENERATE_SOURCEMAP=false react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
